--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tp_signup",
   "version": "1.0.0",
-  "description": "TP sigup\u001b[D\u001b[Dnup",
+  "description": "TP signup",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app/index.js 8081"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/BalticWolf/TP_signup#readme",
   "dependencies": {
-    "expressjs": "^1.0.1",
+    "express": "^4.15.3",
     "pug": "^2.0.0-rc.1"
   }
 }
