--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/BalticWolf/TP_signup#readme",
   "dependencies": {
     "express": "^4.15.3",
+    "formulaire": "0.0.8",
+    "pug": "^2.0.0-rc.1"
+  },
+  "devDependencies": {
     "pug": "^2.0.0-rc.1"
   }
 }
